@@ -1,3 +1,6 @@
+Dec 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- update configure.in and autogen.sh to match newer automake/autoconf
+
 Dec 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - Scan for installed q3, wolfenstein, ut, ut2 and rune maps. Mark not installed
   ones in serverlist
